@@ -50,6 +50,7 @@ namespace kt
 		void selectionChanged(const QItemSelection & selected, const QItemSelection & deselected);
 		void updated();
 		void onFeedRenamed(Feed* f);
+		void refreshRateChanged(int v);
 		
 	signals:
 		void updateCaption(QWidget* w,const QString & text);
