@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>FeedWidget</class>
- <widget class="QWidget" name="FeedWidget" >
-  <property name="geometry" >
+ <widget class="QWidget" name="FeedWidget">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,64 +10,94 @@
     <height>285</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" >
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2" >
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QLabel" name="label" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+        <widget class="QLabel" name="label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>URL:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="KSqueezedTextLabel" name="m_url" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Preferred" hsizetype="Expanding" >
+        <widget class="KSqueezedTextLabel" name="m_url">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
-          <string comment="KDE::DoNotExtract" >KSqueezedTextLabel</string>
+         <property name="text">
+          <string comment="KDE::DoNotExtract">KSqueezedTextLabel</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_3" >
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
-        <widget class="QLabel" name="label_2" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+        <widget class="QLabel" name="label_2">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Status:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="KSqueezedTextLabel" name="m_status" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Preferred" hsizetype="MinimumExpanding" >
+        <widget class="KSqueezedTextLabel" name="m_status">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
-          <string comment="KDE::DoNotExtract" >KSqueezedTextLabel</string>
+         <property name="text">
+          <string comment="KDE::DoNotExtract">KSqueezedTextLabel</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Refresh every:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="m_refresh_rate">
+         <property name="toolTip">
+          <string>Time between automatic refreshes of the feed.</string>
+         </property>
+         <property name="suffix">
+          <string> minutes</string>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>10000</number>
+         </property>
+         <property name="value">
+          <number>60</number>
          </property>
         </widget>
        </item>
@@ -75,39 +106,39 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" >
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
-      <widget class="QTreeView" name="m_item_list" >
-       <property name="rootIsDecorated" >
+      <widget class="QTreeView" name="m_item_list">
+       <property name="rootIsDecorated">
         <bool>false</bool>
        </property>
-       <property name="allColumnsShowFocus" >
+       <property name="allColumnsShowFocus">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2" >
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="KPushButton" name="m_download" >
-         <property name="text" >
+        <widget class="KPushButton" name="m_download">
+         <property name="text">
           <string>Download</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="KPushButton" name="m_refresh" >
-         <property name="text" >
+        <widget class="KPushButton" name="m_refresh">
+         <property name="text">
           <string>Refresh</string>
          </property>
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer" >
-         <property name="orientation" >
+        <spacer name="verticalSpacer">
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" stdset="0" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -116,8 +147,8 @@
         </spacer>
        </item>
        <item>
-        <widget class="KPushButton" name="m_filters" >
-         <property name="text" >
+        <widget class="KPushButton" name="m_filters">
+         <property name="text">
           <string>Filters</string>
          </property>
         </widget>
